--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Brand</a>
+          <a class="navbar-brand" href="#">Tutorials</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -117,7 +117,7 @@
       <button type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-align-left" aria-hidden="true"></span>
       </button>
-      
+
       <button type="button" class="btn btn-default btn-lg">
         <span class="glyphicon glyphicon-star" aria-hidden="true"></span> Star
       </button>
@@ -136,7 +136,7 @@
 </div>
 </body>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"</script>
+<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
- 
+
 </html>
